--- a/css/style.css
+++ b/css/style.css
@@ -24,6 +24,7 @@
   padding: 18px 36px;
   border-radius: 5px;
   border: none;
+  cursor: pointer;
 }
 
 /*body*/
@@ -38,7 +39,8 @@ body{
   background-color: #FFF8F3;
   background-image: url(/images/developer.png), url(/images/header_bg.png);
   background-repeat: no-repeat;
-  background-position: top left, bottom right;
+  background-position: top 38px left 40px, bottom right;
+  
 }
 
 
@@ -82,11 +84,13 @@ nav ul li a{
 .banner_h4{
   font-size: 45px;
   font-weight: 600;
+  margin: 145px 0 5px 0;
 }
 
 .banner_h1{
   font-size: 85px;
   font-weight: bold;
+  margin: 0;
 }
 
 .banner_p{
@@ -98,3 +102,29 @@ nav ul li a{
 .banner_img{
     width: 585px;
 }
+
+.btn_grp{
+  display: flex;
+}
+
+.b_btn1{
+  display: flex;
+  align-items: center;
+  padding: 19px 17px;
+  margin-right: 30px;
+}
+
+.btn_img{
+  margin-right: 10px;
+}
+
+.b_btn2{
+  display: flex;
+  align-items: center;
+  padding: 19px 24px;
+  background-color: #FFF8F3;
+  color: #FD6E0A;
+  border: 1px solid #FD6E0A;
+  
+}
+
