--- a/css/style.css
+++ b/css/style.css
@@ -7,12 +7,24 @@
     "wdth" 100;
 }
 
+/*common style*/
+
 .primary_style{
   color: #FD6E0A;
 }
 
 .dark-2{
   color: #474747;
+}
+
+.common_h{
+  font-size: 35px;
+  font-weight: bold;
+}
+
+.common_p{
+  font-size: 18px;
+  font-weight: 400;
 }
 
 /*button style*/
@@ -28,19 +40,17 @@
 }
 
 /*body*/
-
 body{
   margin: 0;
 }
 
 /*header*/
-
 .header_i{
   background-color: #FFF8F3;
   background-image: url(/images/developer.png), url(/images/header_bg.png);
   background-repeat: no-repeat;
   background-position: top 38px left 40px, bottom right;
-  
+  margin-bottom: 130px;
 }
 
 
@@ -97,6 +107,7 @@ nav ul li a{
   font-size: 18px;
   font-weight: 400;
   color: #757575;
+  margin-top: 20px;
 }
 
 .banner_img{
@@ -105,6 +116,7 @@ nav ul li a{
 
 .btn_grp{
   display: flex;
+  margin-top: 30px;
 }
 
 .b_btn1{
@@ -128,3 +140,48 @@ nav ul li a{
   
 }
 
+/* main section start  */
+
+main{
+  background-color: #FFF8F3;
+  max-width: 1140px;
+  margin: 0 auto;
+  
+  border-radius: 10px;
+}
+
+.main_section{
+  padding: 130px 160px;
+  text-align: center;
+}
+
+.main_h3{
+
+}
+
+.main_p{
+  margin: 30px 0;
+}
+
+.main_div{
+  background-color: #FFFFFF;
+  border-radius: 10px;
+  padding: 0 40px;
+}
+
+.about_items{
+  display: flex;
+  justify-content: space-around;
+}
+
+.about_item{
+}
+
+.item_title{
+  margin: 0;
+}
+
+.item_description{
+  margin: 5px 0;
+  font-weight: bold;
+}
