--- a/css/style.css
+++ b/css/style.css
@@ -47,7 +47,7 @@ body{
 /*header*/
 .header_i{
   background-color: #FFF8F3;
-  background-image: url(/images/developer.png), url(/images/header_bg.png);
+  background-image: url('../images/developer.png'), url('../images/header_bg.png');
   background-repeat: no-repeat;
   background-position: top 38px left 40px, bottom right;
   margin-bottom: 130px;
